2009-10-10  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.10

	* build/vs2008/gmime.vcproj: Bumped version.

	* gmime/gmime-encodings.c (g_mime_encoding_uudecode_step): Fixed a
	uudecoding bug when uulen % 3 is 2. Thanks to Peter Hartley. Fixes
	bug #597794.

2009-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.9

	* build/vs2008/gmime.vcproj: Bumped version.

	* mono/gmime-sharp.dll.config.in: Fixed the target library
	version, thanks to MATSUURA Takanori <t.matsuu@gmail.com>.

2009-08-12  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.8

	* build/vs2008/gmime.vcproj: Bumped version.

	* gmime/gmime-utils.c (charset_convert): If iconv() fails, treat
	conditions where outleft == 0 the same as if we had gotten an
	E2BIG error (e.g. we need to grow the output buffer) so that we
	don't overrun it while appending a '?' placeholder character.

2009-07-02  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Simplified configuring of gmime in a
	cross-compilation environment. Make it possible to work-around
	AC_TRY_RUN limitations by copying of target system iconv-detect.h
	and setting ac_cv_have_iconv_detect_h=yes.

2009-06-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (g_mime_parser_set_header_regex): Fix
	non-GLib regex initialization to actually compile.

2009-05-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-fs.c (stream_read): Removed gross hack.
	(stream_write): Same.
	(g_mime_stream_fs_new): On Windows systems, set the translation
	mode to BINARY.
	(g_mime_stream_fs_new_with_bounds): Same.

	* gmime/gmime-stream-file.c: Same as GMimeStreamFs

2009-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-buffer.c (stream_seek_cache_read): Fixed a
	64bit cleanlines issue.
	(stream_seek_cache_read): Cap the max cache size to G_MAXSIZE.
